--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juan Felipe Pardo - CV</title>
+    <title>Juan Felipe 1Pardo - CV</title>
     <link rel="stylesheet" href="style.css">
 
       <style>
